Filled in the description and a few elements and basic pieces of the page.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,26 @@
     <title>Sign-Up Form</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body>
-    <form action=""></form>
+  <body class="container">
+    <section class="left">
+      <div class="logo">
+        <p>
+          <img src="odin-logo.png" alt="" />
+          ODIN
+        </p>
+      </div>
+    </section>
+    <section class="right">
+      <div class="description">
+        <p>
+          This is not a real online service! You know you need soemthing like
+          this in your life to help you realize your deepest dereams. Sign up
+          now to get started.
+        </p>
+        <p>You <em>know</em> you want to.</p>
+      </div>
+
+      <form action=""></form>
+    </section>
   </body>
 </html>
