Put in all information for the right side of the page.

--- a/index.html
+++ b/index.html
@@ -25,8 +25,27 @@
         </p>
         <p>You <em>know</em> you want to.</p>
       </div>
+      <div class="form">
+        <form action="">
+          <legend>Let's do this!</legend>
 
-      <form action=""></form>
+          <label for="fname">First Name</label>
+          <input type="text" id="fname" name="fname" placeholder="Jalen" />
+
+          <label for="lname">Last Name</label>
+          <input type="text" id="lname" name="lname" placeholder="Moore" />
+
+          <label for="password">Password</label>
+          <input type="password" id="password" name="password" />
+
+          <label for="password">Confirm Password</label>
+          <input type="password" id="password" name="password" />
+        </form>
+      </div>
+      <div>
+        <button class="create-acct">Create Account</button>
+        <p>Already have an account? <span>Log in</span></p>
+      </div>
     </section>
   </body>
 </html>
