--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
           <img src="odin-logo.png" alt="" />
           ODIN
         </p>
+        <p class="copyright">
+          Photo by
+          <a href="https://unsplash.com/@haliewestphoto">Halie West</a> on
+          <a href="https://unsplash.com/">Unsplash</a>
+        </p>
       </div>
     </section>
     <section class="right">
@@ -29,17 +34,39 @@
         <form action="">
           <legend>Let's do this!</legend>
 
-          <label for="fname">First Name</label>
-          <input type="text" id="fname" name="fname" placeholder="Jalen" />
+          <div class="fname">
+            <label for="fname">First Name</label>
+            <input type="text" id="fname" name="fname" placeholder="Jalen" />
+          </div>
 
-          <label for="lname">Last Name</label>
-          <input type="text" id="lname" name="lname" placeholder="Moore" />
+          <div class="lname">
+            <label for="lname">Last Name</label>
+            <input type="text" id="lname" name="lname" placeholder="Moore" />
+          </div>
 
-          <label for="password">Password</label>
-          <input type="password" id="password" name="password" />
+          <div class="email">
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" />
+          </div>
 
-          <label for="password">Confirm Password</label>
-          <input type="password" id="password" name="password" />
+          <div class="phone">
+            <label for="phone">Phone Number</label>
+            <input
+              type="number"
+              id="phone"
+              name="phone"
+              minlength="10"
+              maxlength="10"
+            />
+          </div>
+
+          <div class="password">
+            <label for="password">Password</label>
+            <input type="password" id="password" name="password" />
+
+            <label for="password">Confirm Password</label>
+            <input type="password" id="password" name="password" />
+          </div>
         </form>
       </div>
       <div>
