--- a/index.html
+++ b/index.html
@@ -34,38 +34,45 @@
         <form action="">
           <legend>Let's do this!</legend>
 
-          <div class="fname">
-            <label for="fname">First Name</label>
-            <input type="text" id="fname" name="fname" placeholder="Jalen" />
+          <div class="section1">
+            <div class="fname">
+              <label for="fname">First Name</label>
+              <input type="text" id="fname" name="fname" placeholder="Jalen" />
+            </div>
+
+            <div class="lname">
+              <label for="lname">Last Name</label>
+              <input type="text" id="lname" name="lname" placeholder="Moore" />
+            </div>
           </div>
 
-          <div class="lname">
-            <label for="lname">Last Name</label>
-            <input type="text" id="lname" name="lname" placeholder="Moore" />
+          <div class="section2">
+            <div class="email">
+              <label for="email">Email</label>
+              <input type="email" id="email" name="email" />
+            </div>
+
+            <div class="phone">
+              <label for="phone">Phone Number</label>
+              <input
+                type="number"
+                id="phone"
+                name="phone"
+                minlength="10"
+                maxlength="10"
+              />
+            </div>
           </div>
 
-          <div class="email">
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" />
-          </div>
-
-          <div class="phone">
-            <label for="phone">Phone Number</label>
-            <input
-              type="number"
-              id="phone"
-              name="phone"
-              minlength="10"
-              maxlength="10"
-            />
-          </div>
-
-          <div class="password">
-            <label for="password">Password</label>
-            <input type="password" id="password" name="password" />
-
-            <label for="password">Confirm Password</label>
-            <input type="password" id="password" name="password" />
+          <div class="section3">
+            <div class="password">
+              <label for="password">Password</label>
+              <input type="password" id="password" name="password" />
+            </div>
+            <div class="confirm-password">
+              <label for="password">Confirm Password</label>
+              <input type="password" id="password" name="password" />
+            </div>
           </div>
         </form>
       </div>
