--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body class="container">
+    <div class="block1"></div>
     <section class="left">
       <div class="logo">
         <p>
@@ -25,9 +26,9 @@
       <div class="description">
         <p>
           This is not a real online service! You know you need soemthing like
-          this in your life to help you realize your deepest dereams. Sign up
-          now to get started.
+          this in your life to help you realize your deepest dereams.
         </p>
+        <p>Sign up now to get started.</p>
         <p>You <em>know</em> you want to.</p>
       </div>
       <div class="form">
@@ -76,10 +77,11 @@
           </div>
         </form>
       </div>
-      <div>
+      <div class="submit-form">
         <button class="create-acct">Create Account</button>
         <p>Already have an account? <span>Log in</span></p>
       </div>
     </section>
+    <div class="block2"></div>
   </body>
 </html>
