Added containers and edited proper elements to the left section.

--- a/index.html
+++ b/index.html
@@ -11,15 +11,17 @@
     <div class="block1"></div>
     <section class="left">
       <div class="logo">
-        <p>
-          <img src="odin-logo.png" alt="" />
-          ODIN
-        </p>
-        <p class="copyright">
+        <div class="logo-background">
+          <div class="img-and-name">
+            <img src="odin-logo.png" alt="" />
+            <p class="logo-name">ODIN</p>
+          </div>
+        </div>
+        <footer class="copyright">
           Photo by
           <a href="https://unsplash.com/@haliewestphoto">Halie West</a> on
           <a href="https://unsplash.com/">Unsplash</a>
-        </p>
+        </footer>
       </div>
     </section>
     <section class="right">
