--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       </div>
       <div class="submit-form">
         <button class="create-acct">Create Account</button>
-        <p>Already have an account? <span>Log in</span></p>
+        <p class="log-in">Already have an account? <span>Log in</span></p>
       </div>
     </section>
     <div class="block2"></div>
